# journal-to-file

./: CMakeLists.txt  JournalToFileConfig.cmake.in  abstractjournallogger.h  journallogger.h
.github/workflows/: buildAndTest.yml
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  abstractjournallogger.cpp  abstractjournallogger.h  journallogger.cpp  journallogger.h  journalwriter.cpp  journalwriter.h
tests/: CMakeLists.txt  test_journallogger.cpp  test_journallogger.h  testjournal.qrc
